tests/negative/call_non_callable.xs
-- EXPECT_RUNTIME_ERROR
-- calling a string value must throw
let s = "hello"
s()
